Change title from 'Love Vibes Calculator' to 'Calculator'

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <div class="title">
     <div class="logo">❤</div>
     <div>
-      <h1>Love Vibes Calculator</h1>
+      <h1>Calculator</h1>
       <p class="sub">Calculate with sweetness ✨</p>
     </div>
   </div>
